# irods_client_library_r_cpp

./: CMakeLists.txt  Makefile  README.md  build.sh  install-prerequisites.R
R/: RcppExportsManual.R
src/: r_iinit.cpp
tests/: irods_consortium_continuous_integration_build_hook.py
